2014-01-20  Niibe Yutaka  <gniibe@fsij.org>

	* src/fe25519.h, src/fe25519.c: New.

2014-01-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/bn.c (bn256_is_zero, bn256_is_ge, bn256_cmp): Computation
	should be constant time.

2013-12-25  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.1.

	* tool/gnuk_token.py (gnuk_token.__init__, regnual.__init__): Fix
	the argument of setAltInterface.
	* tool/gnuk_upgrade.py: Likewise.
	* tool/dfuse.py (DFU_STM32.__init__): Likewise.
	* tool/stlinkv2.py (stlinkv2.__init__): Likewise.

2013-12-24  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bn_mul.h (MULADDC_1024_CORE)
	(MULADDC_1024_LOOP): Use younger number registers more for shorter
	instructions and better performance.
	* polarssl/library/bignum.c (mpi_montsqr): Likewise.  Change loop
	structure and conditional branch for better performance.

2013-12-23  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_montmul): Computation
	time should not depends on input.
	(mpi_montmul, mpi_montred, mpi_montsqr): Change the API.
	(mpi_exp_mod): Follow the change of the API.  Allocate memory on
	stack instead of malloc.

	* src/gnuk.ld.in (__process3_stack_size__): Increase stack size.

2013-12-20  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.1.0.

	* src/usb_ctrl.c (USB_FSIJ_GNUK_CARD_CHANGE): New.
	(usb_cb_setup): Support USB_FSIJ_GNUK_CARD_CHANGE.
	* src/usb-icc.c (ccid_card_change_signal): New argument HOW.

2013-12-20  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/bn_mul.h (MULADDC_1024_CORE)
	(MULADDC_CORE): Reorder instructions for more speed up.
	* polarssl/library/bignum.c (mpi_montsqr): Likewise.

2013-12-19  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (--enable-hid-card-change): New (experimental).
	* src/config.h.in (HID_CARD_CHANGE_DEFINE): New.
	* src/usb_ctrl.c (gnuk_setup_endpoints_for_interface)
	(usb_cb_setup, usb_cb_ctrl_write_finish): Conditionalize
	HID_CARD_CHANGE_SUPPORT.